<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="example.nordicid.com.nursampleandroid.Inventory">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inventory_hdr"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewInvStrHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_stream_trigger"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewInvStr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_line_1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewInvStr2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_line_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/toggleButtonInvStream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                android:textOff="@string/inventory_stream_start"
                android:textOn="@string/inventory_stream_stop" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSingleHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_single_hdr"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSingle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_single_mustfound" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSingle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_single_press_unpair" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSingle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_point_reader" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewSingle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_reading_stop" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonScanSingleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory_scan_single"
                tools:onClick="onScanSingleClick" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inventory_wait_buttonpress"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="21dp">

    </FrameLayout>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_epc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>
