<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="example.nordicid.com.nursampleandroid.WriteTag">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns ="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@android:color/black">

            <TextView
                android:id="@+id/headerWriteTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/write_hdr"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="30sp" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_hdr_1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRefreshText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_line_1"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewRefreshText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_line_2"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textWriteStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonRefreshTagList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_refresh_but"
                tools:onClick="onRefreshTagsClick" />

        </TableRow>



        <include
            layout="@layout/taglist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp" />

    </TableLayout>


</LinearLayout>